--- a/DAL/appsettings.json
+++ b/DAL/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Sandbox;Trusted_Connection=True;"
+    "DefaultConnection": "Data Source=WSAMZN-BV45O684\\SQLEXPRESS;Initial Catalog=Sandbox;Integrated Security=True;TrustServerCertificate=True;"
   }
 }
